# polymarket-contrarian-bot

./: .gitignore  BOT_GUIDE.md  CLAUDE.md  SESSION_CONTEXT.md  requirements.txt  start_arena.sh  start_copy_sniper.sh  start_paper.sh  start_sniper.sh  start_track_a.sh  start_track_b.sh  start_viper_v4.sh  start_weather.sh
.claude/: settings.local.json
apps/: calibrate_fv.py  record_markets.py  run_arena.py  run_benchmark.py  run_coin_manager.py  run_collector.py  run_contrarian.py  run_copy_sniper.py  run_discovery.py  run_flow_collector.py  run_market_maker.py  run_optimizer.py  run_sniper.py  run_spread_collector.py  run_weather.py
data/: calibration.json
docs/: contrarian_strategy_thesis.md  session_2026_02_20_viper_v2.md
lib/: __init__.py  benchmark.py  binance_ws.py  bybit_liquidation_ws.py  bybit_perp_ws.py  bybit_spot_ws.py  chainlink_ws.py  coin_manager.py  coinbase_ws.py  console.py  degradation.py  deribit_vol.py  direct_fv.py  discovery.py  edge_model.py  fair_value.py  fast_order.py  kraken_ws.py  leaderboard_api.py  maker_collector.py  market_manager.py  okx_spot_ws.py  optimizer.py  price_feed.py  pyth_ws.py  shadow_logger.py  shadow_maker.py  signal_logger.py  spread_dynamics.py  trade_aggression.py  trade_logger.py  vatic_client.py  volatility_tracker.py  vpin.py  wallet_tracker.py  weather_api.py  weather_markets.py  wu_monitor.py
pmmm/: Cargo.toml
pmmm/examples/: cancel_bench.rs
pmmm/reference/: gen_theo_fixtures.py
pmmm/scripts/: launch_paam_live.sh
pmmm/src/: config.rs  lib.rs  main.rs
pmmm/src/cli/: mod.rs
pmmm/src/clob/: error.rs  market_ws.rs  mod.rs  rest.rs  user_ws.rs
pmmm/src/feeds/: binance.rs  coinbase.rs  mod.rs  pyth.rs  spot_pulse.rs
pmmm/src/gamma/: mod.rs
pmmm/src/persist/: mod.rs
pmmm/src/redemption/: mod.rs
pmmm/src/risk/: mod.rs
pmmm/src/runtime/: latency.rs  mod.rs
pmmm/src/signer/: eip712.rs  hmac.rs  mod.rs  pool.rs  pool.rs.bak
pmmm/src/state/: mod.rs
pmmm/src/strategy/: maker_quoter.rs  markout.rs  mod.rs  quoter.rs  theo.rs
pmmm/src/types/: mod.rs
pmmm/tests/: theo_parity.rs
scripts/: adverse_selection_deep.py  analyze_economics.py  analyze_lag.py  analyze_today.py  as_backtest.py  (+63 more)
(+24 files in other folders)
