[package]
name = "pmmm"
version = "0.1.0"
edition = "2021"
description = "Polymarket Market Maker — pro-tier Rust rewrite of the Python ohan_mm_v7_0 bot"
authors = ["pmmm contributors"]
license = "Proprietary"
publish = false

[[bin]]
name = "pmmm"
path = "src/main.rs"

[dependencies]
# Async runtime + I/O
tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "time", "sync", "signal", "fs"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "http2", "stream"] }

# Crypto / EIP-712 / signing
alloy-primitives = { version = "0.8", features = ["serde"] }
alloy-signer = "0.5"
alloy-signer-local = "0.5"
alloy-sol-types = "0.8"
alloy-dyn-abi = "0.8"
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
sha2 = "0.10"
sha3 = "0.10"
hmac = "0.12"
base64 = "0.22"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.13"
toml = "0.8"

# Math / numerical
statrs = "0.17"

# Concurrency / state
arc-swap = "1.7"
crossbeam = "0.8"
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Time / latency
quanta = "0.12"
chrono = { version = "0.4", features = ["serde"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "time"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utility
url = "2.5"
dashmap = "6.1"
async-trait = "0.1"
once_cell = "1.20"
rand = "0.8"
bytes = "1.7"
pin-project = "1.1"
uuid = { version = "1.10", features = ["v4"] }

[dev-dependencies]
proptest = "1.5"
mockito = "1.5"
tokio = { version = "1.40", features = ["test-util"] }
pretty_assertions = "1.4"
approx = "0.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
